jallib-next:
-----------

Released yyyy-mm-dd

Changes since 0.6.0

device files:
 - Based on MPLAB 8.56.
 - Added 'a' suffic to otherwise duplicate chip identifiers in chipdef_jallib.jal
 - Released 16 more PICs of 18f47j13 and 18f47j53 family (incl LF variants)
 - Released 6 more PICs of 18f87k22 family

externals:
 -

peripherals:
 - ADC: support for 18F2420/2520/4420/4520 (datasheet 39631)

jal extension:
 -

filesystem:
 -

samples:
 - Released blink samples for new device files.

compiler:
 -


jallib-0.6.0:
------------

Released 2010-09-06

Changes since 0.5.0

device files:
 - Based on MPLAB 8.53.
 - Added many device files, of which more than 100 tested and released.
 - Added aliases for the first of two USARTs to be able to use the current
   hardware serial libs for the first of these USARTs.
 - Revised memory specifications for _pic_accum and _pic_isr_w for some PICs.
 - Added T0CON_T0xx aliases for timer 0 related fields in OPTION_REG of midrange PICs
   to be able to use the timer libraries for both midrange and 18F series.
 - Added some extra bitfields to RTC register declarations for convenience.
 - Pseudo variables for port nibbles changed to 'inline' functions/procedures.
 - Revised and added new ADC_group assignments based on MPLAB C18 V3.35 Lite.
 - Fixed errors in declarations of JANSEL aliases for ADC channels.
 - Fixed errors and missing 'pragma fuse_def OSC' declarations of several newer PICs.
 - Added missing comparator disable procedure with several of the newer PICs.
 - Added a section to devicefiles.html with a list of corrections of MPLAB .dev
   files after install of a new release of MPLAB.

externals:
 - Added temperature sensor libraries: mcp3424.jal mcp9800.jal
 - Added library for CANbus mcp2515.jal
 - Added library for Eur/Javi's STERM: lcd_sterm_master.jal
 - Added zero-crossing library: period_skip.jal
 - Added library for 'mac address chip' ee_25aa02e48.jal